Added primary color

--- a/src/_includes/navigation.njk
+++ b/src/_includes/navigation.njk
@@ -3,11 +3,11 @@
 </div>
 
 <nav class="navigation">
+    <a href="/" class="navigation__home">开</a>
     <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="/about">About</a></li>
-        <li><a href="/blog">Blog</a></li>
-        <li><a href="/hobbies">Hobbies</a></li>
-        <li><a href="/projects">Projects</a></li>
+        <li><a href="/about" class="navigation__link">About</a></li>
+        <li><a href="/blog" class="navigation__link">Blog</a></li>
+        <li><a href="/hobbies" class="navigation__link">Hobbies</a></li>
+        <li><a href="/projects" class="navigation__link">Projects</a></li>
     </ul>
 </nav>
