--- a/src/assets/stylesheets/_navigation.scss
+++ b/src/assets/stylesheets/_navigation.scss
@@ -3,16 +3,51 @@
     z-index: 100;
     top: 0;
     left: 0;
-    background-color: rgba(#000, .5);
-    width: 0;
-    height: 0;
-    opacity: 0;
-    transition: opacity .3s ease;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(#000, .9);
+    justify-content: center;
+    align-items: stretch;
+    flex-direction: row;
+    display: none;
+
+    ul {
+        list-style: none;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+    }
 
     &--open {
-        width: 100%;
-        height: 100%;
-        opacity: 1;
+        display: flex;
+    }
+
+    &__home {
+        position: absolute;
+        left: var(--gutter-m);
+        top: 50%;
+        transform: translateY(-50%);
+        font-family: var(--ff-brush);
+        font-size: 50px;
+        color: #fff;
+        user-select: none;
+    }
+
+    &__link {
+        display: block;
+        width: 50vw;
+        text-align: center;
+        font-family: var(--ff-sans);
+        font-size: 100px;
+        font-weight: 900;
+        color: #fff;
+        text-transform: uppercase;
+        user-select: none;
+        
+        &:hover {
+            background-color: #fff;
+            color: #111;
+        }
     }
 
     &__button {
@@ -22,7 +57,6 @@
         right: var(--gutter-m);
         width: 48px;
         height: 48px;
-        outline: 1px solid red;
         cursor: pointer;
         display: flex;
         justify-content: center;
