--- a/src/assets/stylesheets/_variables.scss
+++ b/src/assets/stylesheets/_variables.scss
@@ -12,31 +12,6 @@
     --ff-brush: 'aoyagireisyosimo2', sans-serif;
 
     // Colors
-    --dark-c-shade-1: #121212;
-    --dark-c-shade-2: #232323;
-    --dark-c-text-1: #fcfcfc;
-
-    --light-c-shade-1: #ededed;
-    --light-c-shade-2: #dcdcdc;
-    --light-c-text-1: #222222;
+    --c-primary: #9f7c3c;
 
 }
-
-// Testing Colors
-.color-primary-0 { color: #226666 }	/* Main Primary color */
-.color-primary-1 { color: #17C3C3 }
-.color-primary-2 { color: #1F8A8A }
-.color-primary-3 { color: #1D4242 }
-.color-primary-4 { color: #111E1E }
-
-.color-secondary-1-0 { color: #AA8439 }	/* Main Secondary color (1) */
-.color-secondary-1-1 { color: #FFB41E }
-.color-secondary-1-2 { color: #E6AB34 }
-.color-secondary-1-3 { color: #6E5A31 }
-.color-secondary-1-4 { color: #322B1C }
-
-.color-secondary-2-0 { color: #AA3939 }	/* Main Secondary color (2) */
-.color-secondary-2-1 { color: #FF1E1E }
-.color-secondary-2-2 { color: #E63434 }
-.color-secondary-2-3 { color: #6E3131 }
-.color-secondary-2-4 { color: #321C1C }
