--- a/src/assets/stylesheets/_navigation.scss
+++ b/src/assets/stylesheets/_navigation.scss
@@ -38,7 +38,7 @@
         width: 50vw;
         text-align: center;
         font-family: var(--ff-sans);
-        font-size: 100px;
+        font-size: 12vh;
         font-weight: 900;
         color: #fff;
         text-transform: uppercase;
