--- a/src/assets/stylesheets/_section.scss
+++ b/src/assets/stylesheets/_section.scss
@@ -7,7 +7,7 @@
         max-width: var(--content-width);
         margin-left: auto;
         margin-right: auto;
-        outline: 1px solid red;
+        // outline: 1px solid red;
 
         &+.section__content {
             margin-top: var(--gutter-l);
