--- a/src/assets/stylesheets/_section.scss
+++ b/src/assets/stylesheets/_section.scss
@@ -10,7 +10,7 @@
         // outline: 1px solid red;
 
         &+.section__content {
-            margin-top: var(--gutter-l);
+            margin-top: var(--gutter-xl);
         }
     }
 
