--- a/src/assets/stylesheets/application.scss
+++ b/src/assets/stylesheets/application.scss
@@ -6,8 +6,10 @@
 @import 'base';
 
 @import 'about';
+@import 'footer';
 @import 'grid';
 @import 'hub';
 @import 'list';
 @import 'navigation';
+@import 'post';
 @import 'section';
