Added iconfont, beacons and hobbies

--- a/src/_includes/footer.njk
+++ b/src/_includes/footer.njk
@@ -2,5 +2,6 @@
     made with <span style="color:red">&hearts;</span> &mdash; <a href="/impressum">Impressum</a> &mdash; 
     <a href="https://webring.xxiivv.com/#makkusu-dev" target="_blank">
         <img src="https://webring.xxiivv.com/icon.white.svg" alt="XXIIVV webring"/>
-    </a>
+    </a> 
+    &mdash; またね。
 </footer>
