--- a/src/_includes/navigation.njk
+++ b/src/_includes/navigation.njk
@@ -3,7 +3,7 @@
 </div>
 
 <nav class="navigation">
-    <a href="/" class="navigation__home">开</a>
+    <a href="/" class="navigation__home icofont-home"></a>
     <ul>
         <li><a href="/about" class="navigation__link">About</a></li>
         <li><a href="/blog" class="navigation__link">Blog</a></li>
