--- a/src/assets/stylesheets/_base.scss
+++ b/src/assets/stylesheets/_base.scss
@@ -75,6 +75,10 @@ h4 {
     font-family: var(--ff-sans);
 }
 
+a {
+    color: currentColor;
+}
+
 .link {
     border-bottom: 2px solid var(--c-primary);
     color: #fff;
