--- a/src/assets/stylesheets/_post.scss
+++ b/src/assets/stylesheets/_post.scss
@@ -1,4 +1,27 @@
+.posts {
+    &__item {
+        img {
+            display: block;
+        }
+    }
+}
+
 .post {
+    &__back {
+        position: fixed;
+        top: calc(50% - 24px);
+        left: var(--gutter-m);
+        width: 48px;
+        height: 48px;
+        text-align: center;
+        line-height: 48px;
+        font-size: 2em;
+
+        &:hover {
+            color: var(--c-primary);
+        }
+    }
+
     &__progress {
         --w: 0%;
 
@@ -7,6 +30,7 @@
         left: 0;
         width: 100%;
         height: 8px;
+        z-index: 10;
 
         &:before {
             content: '';
