Restructured blog posts§

--- a/src/assets/stylesheets/_hub.scss
+++ b/src/assets/stylesheets/_hub.scss
@@ -28,12 +28,16 @@
         text-transform: uppercase;
         transition: all .3s ease;
 
-        &:hover {
+        &:hover:not(.hub__link--locked) {
             color: #fff;
             text-shadow: 0 0 .5em var(--c-primary),
                 0 0 1em var(--c-primary),
                 0 0 1.5em white;
         }
+    }
+    &__link--locked {
+        cursor: not-allowed;
+        text-decoration: line-through;
     }
 
     &__kanji {
