--- a/src/assets/stylesheets/_navigation.scss
+++ b/src/assets/stylesheets/_navigation.scss
@@ -48,10 +48,16 @@
         text-transform: uppercase;
         user-select: none;
         
-        &:hover {
-            background-color: #fff;
-            color: #111;
+        &:hover:not(.navigation__link--locked) {
+            color: #fff;
+            text-shadow: 0 0 .5em var(--c-primary),
+                0 0 1em var(--c-primary),
+                0 0 1.5em white;
         }
+    }
+    &__link--locked {
+        cursor: not-allowed;
+        text-decoration: line-through;
     }
 
     &__button {
