--- a/src/assets/stylesheets/_grid.scss
+++ b/src/assets/stylesheets/_grid.scss
@@ -16,7 +16,7 @@ $columns: 12;
     margin: calc(-1 * var(--gutter));
     width: calc(100% + (var(--gutter) * 2));
 
-    [class^='grid__col'] {
+    [class*='grid__col'] {
         padding: var(--gutter);
     }
 
