--- a/src/assets/stylesheets/_variables.scss
+++ b/src/assets/stylesheets/_variables.scss
@@ -10,6 +10,7 @@
     --ff-serif: 'Noto Serif JP', serif;
     --ff-sans: 'Noto Sans JP', sans-serif;
     --ff-brush: 'aoyagireisyosimo2', sans-serif;
+    --ff-mono: monospace;
 
     // Colors
     --c-primary: #9f7c3c;
