--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -9,8 +9,10 @@ navigation: true
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" type="image/png" href="/favicon.png">
-    <title>{{ title }}</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="{{ '/apple-touch-icon.png' | url }}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{{ '/favicon-32x32.png' | url }}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{{ '/favicon-16x16.png' | url }}">
+    <title>{{ title }} @ {{ site.title }}</title>
 
     <link rel="stylesheet" href="{{ '/assets/stylesheets/application.min.css' | url }}">
 </head>
