--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -25,6 +25,7 @@ navigation: true
 
     {% include 'footer.njk' %}
 
+    <script src="{{ '/assets/javascripts/prism.js' | url }}"></script>
     <script type="module" src="{{ '/assets/javascripts/application.js' | url }}"></script>
 </body>
 </html>
