--- a/src/assets/stylesheets/_japanese.scss
+++ b/src/assets/stylesheets/_japanese.scss
@@ -6,5 +6,6 @@
         margin-left: auto;
         margin-right: auto;
         writing-mode: vertical-rl;
+        letter-spacing: .3254em;
     }
 }
