--- a/src/_includes/post.njk
+++ b/src/_includes/post.njk
@@ -10,7 +10,7 @@ layout: base.njk
 
 <div class="section post">
     <div class="section__content section__content--narrow align-c">
-        <h1 class="post__title">{{ title }}</h1>
+        <h1 class="post__title"><a href="{{ '/blog' | url }}">{{ title }}</a></h1>
     </div>
 
     <div class="section__content">
@@ -28,8 +28,9 @@ layout: base.njk
 
         <hr />
 
-        <div class="post__content">
-            {{ content | safe }}
-        </div>
     </div>
+</div>
+
+<div class="post__content">
+    {{ content | safe }}
 </div>
