Started work on first responsive styles

--- a/src/_includes/post.njk
+++ b/src/_includes/post.njk
@@ -3,7 +3,7 @@ layout: base.njk
 ---
 
 <a href="/blog" class="post__back" title="Back to all posts">
-    &larr;
+    <span class="icofont-hand-drawn-left"></span>
 </a>
 
 <div class="post__progress"></div>
