Adjusted headlines Testing on hobby page Moved navigation buttons

--- a/src/_includes/post.njk
+++ b/src/_includes/post.njk
@@ -2,9 +2,7 @@
 layout: base.njk
 ---
 
-<a href="/blog" class="post__back" title="Back to all posts">
-    <span class="icofont-hand-drawn-left"></span>
-</a>
+<a href="/blog" class="post__back icofont-hand-drawn-left" title="Back to all posts"></a>
 
 <div class="post__progress"></div>
 
