--- a/src/assets/stylesheets/_variables.scss
+++ b/src/assets/stylesheets/_variables.scss
@@ -14,6 +14,7 @@
 
     // Colors
     --c-primary: #9f7c3c;
+    --c-dark: #111;
     --c-sb-track: transparent;
     --c-sb-thumb: var(--c-primary);
 
