--- a/src/assets/stylesheets/_grid.scss
+++ b/src/assets/stylesheets/_grid.scss
@@ -25,7 +25,7 @@ $columns: 12;
     }
 
     @for $col from 1 through $columns {
-        .grid__col-#{$col} {
+        .grid__col-#{$col}, .grid__col-xs-#{$col} {
             $width: calc(100% / #{$columns} * #{$col});
             flex: 0 0 #{$width};
         }
