--- a/src/assets/stylesheets/_list.scss
+++ b/src/assets/stylesheets/_list.scss
@@ -8,6 +8,10 @@
         &+li {
             margin-top: 2px;
         }
+
+        ul {
+            padding-left: var(--gutter-s);
+        }
     }
 
     &--plus {
