--- a/src/assets/stylesheets/_hobbies.scss
+++ b/src/assets/stylesheets/_hobbies.scss
@@ -2,7 +2,13 @@
     margin-top: var(--gutter-l);
 }
 
-.hobby {    
+.hobby {
+    --corner: 50px;
+
+    &+.hobby {
+        margin-top: var(--gutter-xxl);
+    }
+
     &__image {
         display: flex;
         justify-content: center;
@@ -12,15 +18,32 @@
         background-size: cover;
         background-position: center;
         margin-bottom: var(--gutter-m);
+        clip-path: polygon(
+            var(--corner) 0,
+            100% 0,
+            100% calc(100% - var(--corner)),
+            calc(100% - var(--corner)) 100%,
+            0% 100%,
+            0% var(--corner)
+        );
     }
 
     &__label {
-        background-color: rgba(#fff, .25);
-        backdrop-filter: blur(5px);
-        padding: var(--gutter-m);
-        border-radius: 1em;
+        --corner: var(--gutter-m);
+
+        background-color: rgba(#000, .75);
+        // backdrop-filter: blur(5px);
+        padding: var(--gutter-s) var(--gutter-m);
         font-family: var(--ff-brush);
-        font-size: 2em;
-        color: var(--c-dark);
+        font-size: var(--fs-xxl);
+        color: var(--c-light);
+        clip-path: polygon(
+            var(--corner) 0,
+            100% 0,
+            100% calc(100% - var(--corner)),
+            calc(100% - var(--corner)) 100%,
+            0% 100%,
+            0% var(--corner)
+        );
     }
 }
