Updated hobbies Added sitemap.xml Copy .htaccess to dist directory on build

--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -16,7 +16,7 @@ navigation: true
 
     <link rel="stylesheet" href="{{ '/assets/stylesheets/application.min.css' | url }}">
 </head>
-<body class="waiting">
+<body>
     {% if navigation %}
         {% include 'navigation.njk' %}
     {% endif %}
