--- a/src/assets/stylesheets/_floating-nav.scss
+++ b/src/assets/stylesheets/_floating-nav.scss
@@ -8,7 +8,7 @@
 
     &__link--highlight {
         background-color: var(--c-primary);
-        color: var(--c-dark);
+        color: var(--c-light);
     }
 
     ul {
