--- a/src/assets/stylesheets/_navigation.scss
+++ b/src/assets/stylesheets/_navigation.scss
@@ -69,6 +69,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        transition: transform .3s ease;
 
         span {
             position: relative;
@@ -78,6 +79,7 @@
             transition: all .3s ease;
             display: block;
             box-shadow: 0 0 10px var(--c-dark);
+            border-radius: 2px;
             
             &:before, &:after {
                 content: "";
@@ -88,6 +90,7 @@
                 width: 100%;
                 height: 100%;
                 background-color: #fff;
+                border-radius: 2px;
                 transition: all .3s ease;
             }
 
@@ -98,6 +101,10 @@
             &:after {
                 transform: rotate(0deg) translateY(300%);
             }
+        }
+
+        &:hover {
+            transform: scale(1.1);
         }
     }
 
