--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -14,7 +14,14 @@ navigation: true
     <link rel="icon" type="image/png" sizes="16x16" href="{{ '/favicon-16x16.png' | url }}">
     <title>{{ title }} @ {{ site.title }}</title>
 
-    <link rel="stylesheet" href="{{ '/assets/stylesheets/application.min.css' | url }}">
+    <link rel="stylesheet" href="{{ '/assets/stylesheets/application.min.css' | url }}"><!--
+     ___    ___   ________   __   ___  __   ___  __    __   ______   __    __       _____     _______   __      __
+    |   \__/   | |   __   | |  | /  / |  | /  / |  |  |  | |   ___| |  |  |  |     |     \   |   ____| \  \    /  /
+    |          | |  |__|  | |  |/  /  |  |/  /  |  |  |  | |  |___  |  |  |  |     |  |\  \  |  |____   \  \  /  /
+    |  |\__/|  | |   __   | |     {   |     {   |  |  |  | |___   | |  |  |  |     |  | |  | |   ____|   \  \/  /
+    |  |    |  | |  |  |  | |  |\  \  |  |\  \  |  |__|  |  ___|  | |  |__|  |  _  |  |/  /  |  |____     \    /
+    |__|    |__| |__|  |__| |__| \__\ |__| \__\ |________| |______| |________| |_| |_____/   |_______|     \__/
+    -->
 </head>
 <body>
     {% if navigation %}
