Updated 404 & Imprint - Added content to 404 - Added content to imprint

--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -14,7 +14,8 @@ navigation: true
     <link rel="icon" type="image/png" sizes="16x16" href="{{ '/favicon-16x16.png' | url }}">
     <title>{{ title }} @ {{ site.title }}</title>
 
-    <link rel="stylesheet" href="{{ '/assets/stylesheets/application.min.css' | url }}"><!--
+    <link rel="stylesheet" href="{{ '/assets/stylesheets/application.min.css' | url }}">
+    <!--
      ___    ___   ________   __   ___  __   ___  __    __   ______   __    __       _____     _______   __      __
     |   \__/   | |   __   | |  | /  / |  | /  / |  |  |  | |   ___| |  |  |  |     |     \   |   ____| \  \    /  /
     |          | |  |__|  | |  |/  /  |  |/  /  |  |  |  | |  |___  |  |  |  |     |  |\  \  |  |____   \  \  /  /
