--- a/src/_includes/footer.njk
+++ b/src/_includes/footer.njk
@@ -1,5 +1,5 @@
 <footer class="footer">
-    made with <span style="color:red">&hearts;</span> &mdash; <a href="/impressum">Impressum</a> &mdash; 
+    made with <span style="color:red">&hearts;</span> &mdash; <a href="/imprint">Imprint</a> &mdash; 
     <a href="https://webring.xxiivv.com/#makkusu-dev" target="_blank">
         <img src="https://webring.xxiivv.com/icon.white.svg" alt="XXIIVV webring"/>
     </a> 
