Multiple updates - Moved htaccess file - Changes tags page to tag page - Updated blog post images - Added default blog post image - Added another testing blog post - Added priority to sitemap - Added changefreq to sitemap - Excluded 404 page from sitemap

--- a/src/_includes/post.njk
+++ b/src/_includes/post.njk
@@ -16,7 +16,7 @@ layout: base.njk
 
         <div class="post__meta">
             <a href="{{ '/blog' | url }}">&larr; Back</a>
-            <div>{{ date | toFormattedDate }}</div>
+            <div>{{ date | toFormattedDate }}, {{ date | toFormattedTime }}</div>
             {%- if tags -%}
                 {%- for tag in tags -%}
                     <a href="/tags/{{ tag }}">#{{ tag }}</a>
