--- a/src/assets/stylesheets/_button.scss
+++ b/src/assets/stylesheets/_button.scss
@@ -7,6 +7,7 @@
     font-family: var(--ff-mono);
     font-weight: bold;
     border: 2px solid transparent;
+    margin: var(--gutter-s);
     clip-path: polygon(
         var(--corner) 0,
         100% 0,
