Blog update - Changed sitemap sorting, sorting by priority - Updated blog posts - Added draft mode for blog posts - Started work on CV page - Added timeline CSS - Removed default 'posts' tag from blog posts - Renamed 'allposts' collection to 'blog' - Updated readme credits - Added Ubuntu Mono as monospace font

--- a/src/assets/stylesheets/_post.scss
+++ b/src/assets/stylesheets/_post.scss
@@ -169,10 +169,11 @@
             }
 
             a {
-                border-bottom: 2px solid rgba(#fff, .2);
+                border-bottom: 2px solid var(--c-primary);
 
                 &:hover {
-                    border-color: var(--c-primary);
+                    border-color: rgba(#fff, .2);
+                    color: var(--c-primary);
                 }
             }
         }
