--- a/src/assets/stylesheets/_fonts.scss
+++ b/src/assets/stylesheets/_fonts.scss
@@ -1,8 +1,9 @@
 /*
  * Noto Sans JP: 400, 700, 900
  * Noto Serif JP: 400, 700, 900
+ * Ubuntu Mono: 400
  */
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700;900&family=Noto+Serif+JP:wght@400;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700;900&family=Noto+Serif+JP:wght@400;700;900&family=Ubuntu+Mono&display=swap');
 
 /*
  * aoyagireisyosimo2
