--- a/src/assets/stylesheets/_variables.scss
+++ b/src/assets/stylesheets/_variables.scss
@@ -11,7 +11,7 @@
     --ff-serif: 'Noto Serif JP', serif;
     --ff-sans: 'Noto Sans JP', sans-serif;
     --ff-brush: 'aoyagireisyosimo2', sans-serif;
-    --ff-mono: monospace;
+    --ff-mono: 'Ubuntu Mono', monospace;
 
     // Font Sizes
     --fs-sm: .75rem;
