--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -9,9 +9,19 @@ navigation: true
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="apple-touch-icon" sizes="180x180" href="{{ '/apple-touch-icon.png' | url }}">
-    <link rel="icon" type="image/png" sizes="32x32" href="{{ '/favicon-32x32.png' | url }}">
-    <link rel="icon" type="image/png" sizes="16x16" href="{{ '/favicon-16x16.png' | url }}">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="{{ '/assets/images/favicons/apple-touch-icon.png' | url }}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{{ '/assets/images/favicons/favicon-32x32.png' | url }}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{{ '/assets/images/favicons/favicon-16x16.png' | url }}">
+    <link rel="manifest" href="{{ '/assets/images/favicons/site.webmanifest' | url }}">
+    <link rel="mask-icon" href="{{ '/assets/images/favicons/safari-pinned-tab.svg' | url }}" color="#9f7c3c">
+    <link rel="shortcut icon" href="{{ '/assets/images/favicons/favicon.ico' | url }}">
+    <meta name="apple-mobile-web-app-title" content="makkusu.dev">
+    <meta name="application-name" content="makkusu.dev">
+    <meta name="msapplication-TileColor" content="#9f7c3c">
+    <meta name="msapplication-config" content="{{ '/assets/images/favicons/browserconfig.xml' | url }}">
+    <meta name="theme-color" content="#9f7c3c">
+
     <title>{{ title }} @ {{ site.title }}</title>
 
     <link rel="stylesheet" href="{{ '/assets/stylesheets/application.min.css' | url }}">
